// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deep parses a pattern 1`] = `
{
  "engine_requested": "OSS",
  "errors": [],
  "explanations": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "loc": {
                "end": {
                  "col": 34,
                  "line": 17,
                  "offset": 296,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
                "start": {
                  "col": 22,
                  "line": 17,
                  "offset": 284,
                },
              },
              "matches": [
                {
                  "extra": {
                    "engine_kind": "OSS",
                    "message": "Test",
                    "metavars": {},
                  },
                  "location": {
                    "end": {
                      "col": 17,
                      "line": 9,
                      "offset": 106,
                    },
                    "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                    "start": {
                      "col": 7,
                      "line": 9,
                      "offset": 96,
                    },
                  },
                  "rule_id": "test-deep",
                },
              ],
              "op": [
                "XPat",
                "user_input",
              ],
            },
          ],
          "loc": {
            "end": {
              "col": 24,
              "line": 15,
              "offset": 249,
            },
            "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
            "start": {
              "col": 7,
              "line": 15,
              "offset": 232,
            },
          },
          "matches": [
            {
              "extra": {
                "engine_kind": "OSS",
                "message": "Test",
                "metavars": {},
              },
              "location": {
                "end": {
                  "col": 17,
                  "line": 9,
                  "offset": 106,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                "start": {
                  "col": 7,
                  "line": 9,
                  "offset": 96,
                },
              },
              "rule_id": "test-deep",
            },
          ],
          "op": "TaintSource",
        },
        {
          "children": [
            {
              "children": [],
              "loc": {
                "end": {
                  "col": 33,
                  "line": 12,
                  "offset": 206,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
                "start": {
                  "col": 22,
                  "line": 12,
                  "offset": 195,
                },
              },
              "matches": [
                {
                  "extra": {
                    "engine_kind": "OSS",
                    "message": "Test",
                    "metavars": {},
                  },
                  "location": {
                    "end": {
                      "col": 20,
                      "line": 12,
                      "offset": 138,
                    },
                    "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                    "start": {
                      "col": 9,
                      "line": 12,
                      "offset": 127,
                    },
                  },
                  "rule_id": "test-deep",
                },
                {
                  "extra": {
                    "engine_kind": "OSS",
                    "message": "Test",
                    "metavars": {},
                  },
                  "location": {
                    "end": {
                      "col": 20,
                      "line": 15,
                      "offset": 188,
                    },
                    "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                    "start": {
                      "col": 9,
                      "line": 15,
                      "offset": 177,
                    },
                  },
                  "rule_id": "test-deep",
                },
                {
                  "extra": {
                    "engine_kind": "OSS",
                    "message": "Test",
                    "metavars": {},
                  },
                  "location": {
                    "end": {
                      "col": 18,
                      "line": 9,
                      "offset": 107,
                    },
                    "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                    "start": {
                      "col": 2,
                      "line": 9,
                      "offset": 91,
                    },
                  },
                  "rule_id": "test-deep",
                },
              ],
              "op": [
                "XPat",
                "sink(...)",
              ],
            },
          ],
          "loc": {
            "end": {
              "col": 22,
              "line": 10,
              "offset": 160,
            },
            "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
            "start": {
              "col": 7,
              "line": 10,
              "offset": 145,
            },
          },
          "matches": [
            {
              "extra": {
                "engine_kind": "OSS",
                "message": "Test",
                "metavars": {},
              },
              "location": {
                "end": {
                  "col": 20,
                  "line": 12,
                  "offset": 138,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                "start": {
                  "col": 9,
                  "line": 12,
                  "offset": 127,
                },
              },
              "rule_id": "test-deep",
            },
            {
              "extra": {
                "engine_kind": "OSS",
                "message": "Test",
                "metavars": {},
              },
              "location": {
                "end": {
                  "col": 20,
                  "line": 15,
                  "offset": 188,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                "start": {
                  "col": 9,
                  "line": 15,
                  "offset": 177,
                },
              },
              "rule_id": "test-deep",
            },
            {
              "extra": {
                "engine_kind": "OSS",
                "message": "Test",
                "metavars": {},
              },
              "location": {
                "end": {
                  "col": 18,
                  "line": 9,
                  "offset": 107,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                "start": {
                  "col": 2,
                  "line": 9,
                  "offset": 91,
                },
              },
              "rule_id": "test-deep",
            },
          ],
          "op": "TaintSink",
        },
      ],
      "loc": {
        "end": {
          "col": 24,
          "line": 4,
          "offset": 44,
        },
        "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
        "start": {
          "col": 13,
          "line": 4,
          "offset": 33,
        },
      },
      "matches": [
        {
          "extra": {
            "dataflow_trace": {
              "intermediate_vars": [],
              "taint_sink": [
                "CoreLoc",
                {
                  "end": {
                    "col": 20,
                    "line": 12,
                    "offset": 138,
                  },
                  "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                  "start": {
                    "col": 9,
                    "line": 12,
                    "offset": 127,
                  },
                },
              ],
              "taint_source": [
                "CoreCall",
                [
                  {
                    "end": {
                      "col": 17,
                      "line": 12,
                      "offset": 135,
                    },
                    "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                    "start": {
                      "col": 14,
                      "line": 12,
                      "offset": 132,
                    },
                  },
                  [],
                  [
                    "CoreLoc",
                    {
                      "end": {
                        "col": 26,
                        "line": 5,
                        "offset": 75,
                      },
                      "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/A.java",
                      "start": {
                        "col": 16,
                        "line": 5,
                        "offset": 65,
                      },
                    },
                  ],
                ],
              ],
            },
            "engine_kind": "OSS",
            "message": "",
            "metavars": {},
          },
          "location": {
            "end": {
              "col": 20,
              "line": 12,
              "offset": 138,
            },
            "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
            "start": {
              "col": 9,
              "line": 12,
              "offset": 127,
            },
          },
          "rule_id": "test-deep",
        },
        {
          "extra": {
            "dataflow_trace": {
              "intermediate_vars": [],
              "taint_sink": [
                "CoreLoc",
                {
                  "end": {
                    "col": 20,
                    "line": 15,
                    "offset": 188,
                  },
                  "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                  "start": {
                    "col": 9,
                    "line": 15,
                    "offset": 177,
                  },
                },
              ],
              "taint_source": [
                "CoreCall",
                [
                  {
                    "end": {
                      "col": 17,
                      "line": 15,
                      "offset": 185,
                    },
                    "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                    "start": {
                      "col": 14,
                      "line": 15,
                      "offset": 182,
                    },
                  },
                  [],
                  [
                    "CoreCall",
                    [
                      {
                        "end": {
                          "col": 19,
                          "line": 7,
                          "offset": 85,
                        },
                        "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/B.java",
                        "start": {
                          "col": 16,
                          "line": 7,
                          "offset": 82,
                        },
                      },
                      [],
                      [
                        "CoreLoc",
                        {
                          "end": {
                            "col": 26,
                            "line": 5,
                            "offset": 75,
                          },
                          "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/A.java",
                          "start": {
                            "col": 16,
                            "line": 5,
                            "offset": 65,
                          },
                        },
                      ],
                    ],
                  ],
                ],
              ],
            },
            "engine_kind": "OSS",
            "message": "",
            "metavars": {},
          },
          "location": {
            "end": {
              "col": 20,
              "line": 15,
              "offset": 188,
            },
            "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
            "start": {
              "col": 9,
              "line": 15,
              "offset": 177,
            },
          },
          "rule_id": "test-deep",
        },
        {
          "extra": {
            "dataflow_trace": {
              "intermediate_vars": [],
              "taint_sink": [
                "CoreLoc",
                {
                  "end": {
                    "col": 18,
                    "line": 9,
                    "offset": 107,
                  },
                  "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                  "start": {
                    "col": 2,
                    "line": 9,
                    "offset": 91,
                  },
                },
              ],
              "taint_source": [
                "CoreLoc",
                {
                  "end": {
                    "col": 17,
                    "line": 9,
                    "offset": 106,
                  },
                  "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                  "start": {
                    "col": 7,
                    "line": 9,
                    "offset": 96,
                  },
                },
              ],
            },
            "engine_kind": "OSS",
            "message": "",
            "metavars": {},
          },
          "location": {
            "end": {
              "col": 18,
              "line": 9,
              "offset": 107,
            },
            "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
            "start": {
              "col": 2,
              "line": 9,
              "offset": 91,
            },
          },
          "rule_id": "test-deep",
        },
      ],
      "op": "Taint",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "loc": {
                "end": {
                  "col": 34,
                  "line": 17,
                  "offset": 296,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
                "start": {
                  "col": 22,
                  "line": 17,
                  "offset": 284,
                },
              },
              "matches": [],
              "op": [
                "XPat",
                "user_input",
              ],
            },
          ],
          "loc": {
            "end": {
              "col": 24,
              "line": 15,
              "offset": 249,
            },
            "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
            "start": {
              "col": 7,
              "line": 15,
              "offset": 232,
            },
          },
          "matches": [],
          "op": "TaintSource",
        },
        {
          "children": [
            {
              "children": [],
              "loc": {
                "end": {
                  "col": 33,
                  "line": 12,
                  "offset": 206,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
                "start": {
                  "col": 22,
                  "line": 12,
                  "offset": 195,
                },
              },
              "matches": [],
              "op": [
                "XPat",
                "sink(...)",
              ],
            },
          ],
          "loc": {
            "end": {
              "col": 22,
              "line": 10,
              "offset": 160,
            },
            "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
            "start": {
              "col": 7,
              "line": 10,
              "offset": 145,
            },
          },
          "matches": [],
          "op": "TaintSink",
        },
      ],
      "loc": {
        "end": {
          "col": 24,
          "line": 4,
          "offset": 44,
        },
        "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
        "start": {
          "col": 13,
          "line": 4,
          "offset": 33,
        },
      },
      "matches": [],
      "op": "Taint",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "loc": {
                "end": {
                  "col": 34,
                  "line": 17,
                  "offset": 296,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
                "start": {
                  "col": 22,
                  "line": 17,
                  "offset": 284,
                },
              },
              "matches": [
                {
                  "extra": {
                    "engine_kind": "OSS",
                    "message": "Test",
                    "metavars": {},
                  },
                  "location": {
                    "end": {
                      "col": 26,
                      "line": 5,
                      "offset": 75,
                    },
                    "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/A.java",
                    "start": {
                      "col": 16,
                      "line": 5,
                      "offset": 65,
                    },
                  },
                  "rule_id": "test-deep",
                },
              ],
              "op": [
                "XPat",
                "user_input",
              ],
            },
          ],
          "loc": {
            "end": {
              "col": 24,
              "line": 15,
              "offset": 249,
            },
            "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
            "start": {
              "col": 7,
              "line": 15,
              "offset": 232,
            },
          },
          "matches": [
            {
              "extra": {
                "engine_kind": "OSS",
                "message": "Test",
                "metavars": {},
              },
              "location": {
                "end": {
                  "col": 26,
                  "line": 5,
                  "offset": 75,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/A.java",
                "start": {
                  "col": 16,
                  "line": 5,
                  "offset": 65,
                },
              },
              "rule_id": "test-deep",
            },
          ],
          "op": "TaintSource",
        },
        {
          "children": [
            {
              "children": [],
              "loc": {
                "end": {
                  "col": 33,
                  "line": 12,
                  "offset": 206,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
                "start": {
                  "col": 22,
                  "line": 12,
                  "offset": 195,
                },
              },
              "matches": [],
              "op": [
                "XPat",
                "sink(...)",
              ],
            },
          ],
          "loc": {
            "end": {
              "col": 22,
              "line": 10,
              "offset": 160,
            },
            "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
            "start": {
              "col": 7,
              "line": 10,
              "offset": 145,
            },
          },
          "matches": [],
          "op": "TaintSink",
        },
      ],
      "loc": {
        "end": {
          "col": 24,
          "line": 4,
          "offset": 44,
        },
        "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/test-rule-java.json",
        "start": {
          "col": 13,
          "line": 4,
          "offset": 33,
        },
      },
      "matches": [],
      "op": "Taint",
    },
  ],
  "matches": [
    {
      "extra": {
        "dataflow_trace": {
          "intermediate_vars": [],
          "taint_sink": [
            "CoreLoc",
            {
              "end": {
                "col": 18,
                "line": 9,
                "offset": 107,
              },
              "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
              "start": {
                "col": 2,
                "line": 9,
                "offset": 91,
              },
            },
          ],
          "taint_source": [
            "CoreLoc",
            {
              "end": {
                "col": 17,
                "line": 9,
                "offset": 106,
              },
              "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
              "start": {
                "col": 7,
                "line": 9,
                "offset": 96,
              },
            },
          ],
        },
        "engine_kind": "PRO",
        "message": "",
        "metavars": {},
      },
      "location": {
        "end": {
          "col": 18,
          "line": 9,
          "offset": 107,
        },
        "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
        "start": {
          "col": 2,
          "line": 9,
          "offset": 91,
        },
      },
      "rule_id": "test-deep",
    },
    {
      "extra": {
        "dataflow_trace": {
          "intermediate_vars": [],
          "taint_sink": [
            "CoreLoc",
            {
              "end": {
                "col": 20,
                "line": 12,
                "offset": 138,
              },
              "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
              "start": {
                "col": 9,
                "line": 12,
                "offset": 127,
              },
            },
          ],
          "taint_source": [
            "CoreCall",
            [
              {
                "end": {
                  "col": 17,
                  "line": 12,
                  "offset": 135,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                "start": {
                  "col": 14,
                  "line": 12,
                  "offset": 132,
                },
              },
              [],
              [
                "CoreLoc",
                {
                  "end": {
                    "col": 26,
                    "line": 5,
                    "offset": 75,
                  },
                  "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/A.java",
                  "start": {
                    "col": 16,
                    "line": 5,
                    "offset": 65,
                  },
                },
              ],
            ],
          ],
        },
        "engine_kind": "PRO",
        "message": "",
        "metavars": {},
      },
      "location": {
        "end": {
          "col": 20,
          "line": 12,
          "offset": 138,
        },
        "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
        "start": {
          "col": 9,
          "line": 12,
          "offset": 127,
        },
      },
      "rule_id": "test-deep",
    },
    {
      "extra": {
        "dataflow_trace": {
          "intermediate_vars": [],
          "taint_sink": [
            "CoreLoc",
            {
              "end": {
                "col": 20,
                "line": 15,
                "offset": 188,
              },
              "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
              "start": {
                "col": 9,
                "line": 15,
                "offset": 177,
              },
            },
          ],
          "taint_source": [
            "CoreCall",
            [
              {
                "end": {
                  "col": 17,
                  "line": 15,
                  "offset": 185,
                },
                "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
                "start": {
                  "col": 14,
                  "line": 15,
                  "offset": 182,
                },
              },
              [],
              [
                "CoreCall",
                [
                  {
                    "end": {
                      "col": 19,
                      "line": 7,
                      "offset": 85,
                    },
                    "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/B.java",
                    "start": {
                      "col": 16,
                      "line": 7,
                      "offset": 82,
                    },
                  },
                  [],
                  [
                    "CoreLoc",
                    {
                      "end": {
                        "col": 26,
                        "line": 5,
                        "offset": 75,
                      },
                      "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/A.java",
                      "start": {
                        "col": 16,
                        "line": 5,
                        "offset": 65,
                      },
                    },
                  ],
                ],
              ],
            ],
          ],
        },
        "engine_kind": "PRO",
        "message": "",
        "metavars": {},
      },
      "location": {
        "end": {
          "col": 20,
          "line": 15,
          "offset": 188,
        },
        "path": "/Users/r2cuser/r2c/semgrep-proprietary/semgrep/js/engine/tests/C.java",
        "start": {
          "col": 9,
          "line": 15,
          "offset": 177,
        },
      },
      "rule_id": "test-deep",
    },
  ],
  "rules_by_engine": [
    [
      "test-deep",
      "PRO",
    ],
  ],
  "skipped_rules": [],
  "stats": {
    "errorfiles": 0,
    "okfiles": 3,
  },
}
`;

exports[`yaml parser parses a pattern with pattern-regex 1`] = `
{
  "engine_requested": "OSS",
  "errors": [],
  "explanations": [
    {
      "children": [],
      "loc": {
        "end": {
          "col": 30,
          "line": 6,
          "offset": 99,
        },
        "path": "test-rule-yaml.json",
        "start": {
          "col": 24,
          "line": 6,
          "offset": 93,
        },
      },
      "matches": [
        {
          "extra": {
            "engine_kind": "OSS",
            "message": "test",
            "metavars": {},
          },
          "location": {
            "end": {
              "col": 4,
              "line": 1,
              "offset": 3,
            },
            "path": "test.yaml",
            "start": {
              "col": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "rule_id": "test",
        },
      ],
      "op": [
        "XPat",
        "^fo+",
      ],
    },
  ],
  "matches": [
    {
      "extra": {
        "engine_kind": "OSS",
        "message": "test",
        "metavars": {},
      },
      "location": {
        "end": {
          "col": 4,
          "line": 1,
          "offset": 3,
        },
        "path": "test.yaml",
        "start": {
          "col": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rule_id": "test",
    },
  ],
  "rules_by_engine": [
    [
      "test",
      "OSS",
    ],
  ],
  "skipped_rules": [],
  "stats": {
    "errorfiles": 0,
    "okfiles": 1,
  },
}
`;

exports[`yaml parser parses a simple pattern 1`] = `
{
  "engine_requested": "OSS",
  "errors": [],
  "explanations": [
    {
      "children": [],
      "loc": {
        "end": {
          "col": 27,
          "line": 6,
          "offset": 96,
        },
        "path": "test-rule-yaml.json",
        "start": {
          "col": 18,
          "line": 6,
          "offset": 87,
        },
      },
      "matches": [
        {
          "extra": {
            "engine_kind": "OSS",
            "message": "test",
            "metavars": {
              "$X": {
                "abstract_content": "bar",
                "end": {
                  "col": 9,
                  "line": 1,
                  "offset": 8,
                },
                "start": {
                  "col": 6,
                  "line": 1,
                  "offset": 5,
                },
              },
            },
          },
          "location": {
            "end": {
              "col": 9,
              "line": 1,
              "offset": 8,
            },
            "path": "test.yaml",
            "start": {
              "col": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "rule_id": "test",
        },
      ],
      "op": [
        "XPat",
        "foo: $X",
      ],
    },
  ],
  "matches": [
    {
      "extra": {
        "engine_kind": "OSS",
        "message": "test",
        "metavars": {
          "$X": {
            "abstract_content": "bar",
            "end": {
              "col": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "col": 6,
              "line": 1,
              "offset": 5,
            },
          },
        },
      },
      "location": {
        "end": {
          "col": 9,
          "line": 1,
          "offset": 8,
        },
        "path": "test.yaml",
        "start": {
          "col": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rule_id": "test",
    },
  ],
  "rules_by_engine": [
    [
      "test",
      "OSS",
    ],
  ],
  "skipped_rules": [],
  "stats": {
    "errorfiles": 0,
    "okfiles": 1,
  },
}
`;
